# wmbusmeters

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGES  CLAUDE.md  DLMS_Flagids.csv  DLMS_Flagids.tsv  Dockerfile  Dockerfile.dev  HowToAddaNewMeter.txt  LICENSE  Makefile  README.md  TESTING.md  XMLExtract.java  aes.cc  bloat.txt  check.sh  cmdline.cc  cmdline.h  configure  configure.ac  docker-entrypoint.sh  dvparser.cc  dvparser.h  install.sh  main.cc  manufacturers.h  meter_fhkvdataiii.cc  meter_iperl.cc  meter_multical21.cc  meter_multical302.cc  meter_omnipower.cc  meter_qcaloric.cc  meter_supercom587.cc  meters.cc  meters.h  meters_common_implementation.h  printer.cc  (+24 more)
.circleci/: config.yml
autoconf/: Makefile.in  config.h.in  spec.gmk.in
benchmarks/: bcd2bin.benchmark.cc  benchmark-completion.bash  benchmark.h  bin2hex.benchmark.cc  char2int.benchmark.cc  hex2bin.benchmark.cc  is_hex_char.benchmark.cc  is_hex_string_flex.benchmark.cc  is_hex_string_strict.benchmark.cc  parse_dv.benchmark.cc  reverse.benchmark.cc
browser/: Makefile  bindings.cc  build.sh  serial-manager.js  serial_web.cc  serial_web.h  usleep_async.h  wasm_stubs.cc  wmbusmeters.html  wmbusmeters.html.template  xmq_config.h
deb/: changelog  collect_copyrights.sh  control  copyright  create_deb.sh  postinst  postrm  rules  watch
doc/: CreateDriver.md  CreateMeter.md
docker/: Dockerfile  Dockerfile.arm64v8  Dockerfile.armhf  README.md  docker-entrypoint.sh
drivers/: Makefile  generate.sh  generate_index.sh  print_map_mvt.sh  print_mvt.sh  send_ha_discovery.sh  test.sh  test_case.sh  to-ha-discovery.xslq
examples/: decoding_client.py
fuzz_testcases/: seed1  seed2
ha-addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.json  mosquitto_pub.sh  mqtt_discovery.sh  publish_discovery_messages.py  run.sh
migrator/: cpp_to_xmq.py  driver_amiplus.cc  driver_aventieshca.cc  driver_aventieswm.cc  driver_ebzwmbe.cc  driver_ei6500.cc  driver_emerlin868.cc  driver_engelmann-faw.cc  driver_esyswm.cc  driver_evo868.cc  driver_gransystems.cc  driver_iem3000.cc  (+16 more)
(+778 files in other folders)
